# kirara_server

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: controller.rs  kirara.sql  main.rs  routes.rs  schema.rs  utils.rs
src/controller/: media.rs  user.rs
src/controller/image/: api.rs  request.rs  response.rs
src/controller/media/: api.rs
src/controller/post/: api.rs  request.rs  response.rs
src/controller/user/: api.rs  request.rs  response.rs
src/entities/: images.rs  media.rs  mod.rs  posts.rs  prelude.rs  users.rs
src/middleware/: auth.rs
src/models/: user.rs
src/utils/: dir.rs  image.rs  media.rs  media_type.rs  user.rs
