[package]
name = "kirara_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
chrono = "0.4.26"
dotenvy = "0.15.7"
http-body = "0.4.5"
image = "0.24.6"
jsonwebtoken = "9.1.0"
meilisearch-sdk = "0.24.3"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
sea-orm = { version = "0.12.0-rc.2", features = ["sqlx-mysql", "runtime-actix-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = "0.7.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
