[package]
name = "kirara_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = "0.4.33"
dotenvy = "0.15.7"
image = "0.24.8"
jsonwebtoken = "9.2.0"
meilisearch-sdk = "0.24.3"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
sea-orm = { version = "0.12.14", features = ["sqlx-mysql", "runtime-actix-native-tls", "macros"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
